--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,56 @@
 /*  your css code here. If applicable */
+*{
+	box-sizing:border-box;
+	margin:0px;
+	padding:0px;
+}
+p{
+	text-align:center;
+}
+.header{
+	background:#011e29;
+	color:white;
+	text-align:center;
+	padding:20px;
+}
+.body{
+	background:#f5f5f5;
+	display:flex;
+	justify-content:space-around;
+	gap:5px;
+	height:500px;
+	width:100%;
+	margin-top:10px;
+}
+.pictorial-news-section{
+	background:white;
+	padding:20px;
+	justify-content:center;
+	height:400px;
+	width:40%;
+	border-radius:15px;
+}
+img{
+	width:100%;
+	height:90px;
+}
+h3{
+	margin:10px;
+	text-align:center;
+}
+.main-article{
+	background:white;
+	justify-content:center;
+	border-radius:15px;
+	padding:10px;
+	height:250px;
+	width:40%;
+}
+.latest-news-section{
+	background:white;
+	width:20%;
+	padding:20px;
+	height:200px;
+	border-radius:10px;
+	justify-content:center;
+}
