--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ p{
 	background:white;
 	padding:20px;
 	justify-content:center;
+	text-align:center;
 	height:400px;
 	width:40%;
 	border-radius:15px;
